--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Box Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 </head>
 <body>
     <!-- NavBar  -->
@@ -32,5 +34,47 @@
             <i class='bx bx-caret-down' ></i>
         </div>
     </header>
+    <!-- Home Section -->
+    <section class="home swiper" id="home">
+        <div class="swiper-wrapper">
+            <!-- Slide 1 -->
+            <div class="swiper-slide container">
+                <div class="home-text">
+                    <span>We are Siaous</span>
+                    <h1>Choose Siaous <br> the best healthy <br> chicken salad</h1>
+                    <a href="" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
+                </div>
+                <img src="img/home1.jpg" alt="">
+            </div>
+
+            <!-- Slide 2 -->
+            <div class="swiper-slide container">
+                <div class="home-text">
+                    <span>We are Siaous</span>
+                    <h1>Choose Siaous <br> the best healthy <br> chicken salad</h1>
+                    <a href="" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
+                </div>
+                <img src="img/home2.png" alt="">
+            </div>
+
+            <!-- Slide 3 -->
+            <div class="swiper-slide container">
+                <div class="home-text">
+                    <span>We are Siaous</span>
+                    <h1>Choose Siaous <br> the best healthy <br> chicken salad</h1>
+                    <a href="" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
+                </div>
+                <img src="img/home3.png" alt="">
+            </div>
+            
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+    </section>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Link to JS -->
+    <script src="main.js"></script>
 </body>
 </html>
