--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <div class="swiper-button-prev"></div>
     </section>
     <!-- Swiper JS -->
+    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
     <!-- Link to JS -->
