--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,9 @@
     <!-- Box Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 </head>
+
 <body>
     <!-- NavBar  -->
     <header>
@@ -31,7 +33,7 @@
         <div class="profile">
             <img src="img/profile.png" alt="">
             <span>Siara Kopza</span>
-            <i class='bx bx-caret-down' ></i>
+            <i class='bx bx-caret-down'></i>
         </div>
     </header>
     <!-- Home Section -->
@@ -66,16 +68,66 @@
                 </div>
                 <img src="img/home3.png" alt="">
             </div>
-            
-          </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
     </section>
+    <!-- Categories Section -->
+
+    <section class="categories" id="categories">
+        <div class="heading">
+            <h1>Browse Our Hottest<br><span>Categories</span></h1>
+            <a href="#" class="btn">See All<i class='bx bx-right-arrow-alt'></i></a>
+        </div>
+
+        <!-- Container Content -->
+        <div class="categories-container">
+            <!-- Box 1 -->
+            <div class="box box1">
+                <img src="img/cate1.png" alt="">
+                <h2>Friuts</h2>
+                <span>22 Items</span>
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
+            <!-- Box 2 -->
+            <div class="box box2">
+                <img src="img/cate2.png" alt="">
+                <h2>Vegetables</h2>
+                <span>22 Items</span>
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
+            <!-- Box 3 -->
+            <div class="box box3">
+                <img src="img/cate3.png" alt="">
+                <h2>Drinks</h2>
+                <span>22 Items</span>
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
+            <!-- Box 4 -->
+            <div class="box box4">
+                <img src="img/cate4.png" alt="">
+                <h2>Fresh Nuts</h2>
+                <span>22 Items</span>
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
+             <!-- Box 5 -->
+             <div class="box box5">
+                <img src="img/cate5.png" alt="">
+                  <h2>Spices</h2>
+                  <span>22 Items</span>
+                  <i class='bx bx-right-arrow-alt'></i>  
+              </div>
+        </div>
+    </section>
+
     <!-- Swiper JS -->
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
+
     <!-- Link to JS -->
     <script src="main.js"></script>
 </body>
+
 </html>
