--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="#" class="btn">See All<i class='bx bx-right-arrow-alt'></i></a>
         </div>
 
-        <!-- Container Content -->
+        <!-- Categories Container Content -->
         <div class="categories-container">
             <!-- Box 1 -->
             <div class="box box1">
@@ -118,6 +118,79 @@
                   <span>22 Items</span>
                   <i class='bx bx-right-arrow-alt'></i>  
               </div>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products" id="products">
+        <div class="heading">
+            <h1>Our Popular <br><span>Products</span></h1>
+            <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
+        </div>
+
+        <!-- Product Content -->
+        <div class="products-container">
+                
+            <!-- Box 1 -->
+            <div class="box">
+                <img src="img/p1.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
+            <!-- Box 2 -->
+            <div class="box">
+                <img src="img/p2.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
+            <!-- Box 3 -->
+            <div class="box">
+                <img src="img/p3.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
+            <!-- Box 4 -->
+            <div class="box">
+                <img src="img/p4.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
+            <!-- Box 5 -->
+            <div class="box">
+                <img src="img/p5.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
+            <!-- Box 6 -->
+            <div class="box">
+                <img src="img/p6.jpg" alt="">
+                <span>Fresh Items</span>
+                <h2>Farm fresh organic <br>fruits 250g</h2>
+                <h3 class="price">R7.99 <span>/kg</span></h3>
+                <i class='bx bx-cart-alt'></i>
+                <i class='bx bx-heart'></i>
+                <span class="discount">-25%</span>
+            </div>
         </div>
     </section>
 
