create for about section and text also change the size for paragraph and span

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 <span>22 Items</span>
                 <i class='bx bx-right-arrow-alt'></i>
             </div>
-             <!-- Box 5 -->
-             <div class="box box5">
+            <!-- Box 5 -->
+            <div class="box box5">
                 <img src="img/cate5.png" alt="">
-                  <h2>Spices</h2>
-                  <span>22 Items</span>
-                  <i class='bx bx-right-arrow-alt'></i>  
-              </div>
+                <h2>Spices</h2>
+                <span>22 Items</span>
+                <i class='bx bx-right-arrow-alt'></i>
+            </div>
         </div>
     </section>
 
@@ -130,7 +130,7 @@
 
         <!-- Product Content -->
         <div class="products-container">
-                
+
             <!-- Box 1 -->
             <div class="box">
                 <img src="img/p1.jpg" alt="">
@@ -191,6 +191,17 @@
                 <i class='bx bx-heart'></i>
                 <span class="discount">-25%</span>
             </div>
+        </div>
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section class="about" id="about">
+        <img src="img/about.jpg" alt="">
+        <div class="about-text">
+            <span>About Us</span>
+            <p>Fruit and vegetables should be an important part of your daily diet. They are naturally good and contain vitamins and minerals that can help to keep you healthy. They can also help protect against some diseases.</p>
+            <p>fruit and vegetable processing is to supply wholesome, safe, nutritious and acceptable food to consumers throughout the year.</p>
+            <a href="#" class="btn">Learn More<i class='bx bx-right-arrow-alt'></i></a>
         </div>
     </section>
 
