--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#categories">Categories</a></li>
             <li><a href="#products">Products</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#customer">Customers</a></li>
+            <li><a href="#customers">Customers</a></li>
         </ul>
         <!-- Profile -->
         <div class="profile">
@@ -202,6 +202,63 @@
             <p>Fruit and vegetables should be an important part of your daily diet. They are naturally good and contain vitamins and minerals that can help to keep you healthy. They can also help protect against some diseases.</p>
             <p>fruit and vegetable processing is to supply wholesome, safe, nutritious and acceptable food to consumers throughout the year.</p>
             <a href="#" class="btn">Learn More<i class='bx bx-right-arrow-alt'></i></a>
+        </div>
+    </section>
+
+    <!-- CUSTOMER SECTION -->
+    <section class="customers" id="customers">
+        <h2>Why Customers Love Us?</h2>
+
+        <!-- CUSTOMERS CONTAINER -->
+        <div class="customers-container">
+            <!-- Review 1 -->
+            <div class="box">
+                <i class='bx bxs-quote-alt-left'></i>
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half' ></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi in eos fugit? Modi labore id consequuntur?</p>
+                <div class="review-profile">
+                    <img src="img/c1.jpeg" alt="">
+                    <h3>Andiswa Mfenyana</h3>
+                </div>
+            </div>
+            <!-- Review 2 -->
+            <div class="box">
+                <i class='bx bxs-quote-alt-left'></i>
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half' ></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi in eos fugit? Modi labore id consequuntur?</p>
+                <div class="review-profile">
+                    <img src="img/c2.jpeg" alt="">
+                    <h3>Andiswa Mfenyana</h3>
+                </div>
+            </div>
+            <!-- Review 3 -->
+            <div class="box">
+                <i class='bx bxs-quote-alt-left'></i>
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half' ></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi in eos fugit? Modi labore id consequuntur?</p>
+                <div class="review-profile">
+                    <img src="img/c3.jpg" alt="">
+                    <h3>Andiswa Mfenyana</h3>
+                </div>
+            </div>
         </div>
     </section>
 
