--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi in eos fugit? Modi labore id consequuntur?</p>
                 <div class="review-profile">
                     <img src="img/c2.jpeg" alt="">
-                    <h3>Andiswa Mfenyana</h3>
+                    <h3>Thabile Kopolo</h3>
                 </div>
             </div>
             <!-- Review 3 -->
@@ -256,7 +256,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi in eos fugit? Modi labore id consequuntur?</p>
                 <div class="review-profile">
                     <img src="img/c3.jpg" alt="">
-                    <h3>Andiswa Mfenyana</h3>
+                    <h3>Siyanda Kopolo</h3>
                 </div>
             </div>
         </div>
