--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
             </form>
         </div>
     </section>
+    <!-- COPYRIGHT -->
+    <div class="copyright">
+        <p>&#169; SiyandaKopolo All Right Reserved.</p>
+    </div>
 
     <!-- Swiper JS -->
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
